--- a/templates/hero.html
+++ b/templates/hero.html
@@ -11,7 +11,7 @@
                 Cheapest tickets
             </li>
         </ul>
-        <a id="tickets" href="#products" class="btn btn-primary mx-auto rounded-md p-3">Buy your tickets Here!</a>
+        <a id="tickets" href="#products" class="btn btn-primary mx-auto rounded-md p-3 mb">Buy your tickets Here!</a>
     </div>
     <div class="my-auto flex flex-col justify-center h-full">
         <h1 class="text-primary text-center">American <span class="text-secondary">Airlines</span></h1>
