--- a/templates/products.html
+++ b/templates/products.html
@@ -1,3 +1,4 @@
-<div id="lista" class="grid grid-cols-4 mx-auto w-80 text-center bg-secondary gap-4 p-3">
+<h1 class="text-center text-primary">Choose your destiny</h1>
+<div id="lista" class="grid grid-cols-4 mx-auto w-80 bg-secondary gap-4 p-3">
 
 </div>
