--- a/css/style.css
+++ b/css/style.css
@@ -188,12 +188,16 @@ ul {
     display: grid;
 }
 
-.grid-cols-2 {
-    grid-template-columns: repeat(2, 1fr);
+@media (min-width: 768px) {
+    .grid-cols-2 {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
-.grid-cols-4 {
-    grid-template-columns: repeat(4, 1fr);
+@media (min-width: 992px) {
+    .grid-cols-4 {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
 
 .gap-4 {
