--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,15 @@ ul {
     }
 }
 
+@media (max-width: 768px) {
+    .row-1 {
+        grid-row: 1;
+    }
+    .row-2 {
+        grid-row: 2;
+    }
+}
+
 .gap-4 {
     gap: 1em;
 }
