--- a/templates/hero.html
+++ b/templates/hero.html
@@ -1,5 +1,5 @@
 <div class="absolute z-2 h-full w-full grid grid-cols-2">
-    <div class="my-auto flex flex-col justify-center h-full">
+    <div class="my-auto flex flex-col justify-center h-full row-2">
         <ul>
             <li class="text-primary text-center py-3 text-xl">
                 We care about our clients
@@ -13,7 +13,7 @@
         </ul>
         <a id="tickets" href="#products" class="btn btn-primary mx-auto rounded-md p-3 mb">Buy your tickets Here!</a>
     </div>
-    <div class="my-auto flex flex-col justify-center h-full">
+    <div class="my-auto flex flex-col justify-center h-full row-1">
         <h1 class="text-primary text-center">American <span class="text-secondary">Airlines</span></h1>
         <h2 class="text-primary text-center">The pleasure of flying</h2>
         <h3 class="text-primary text-center">Fly to the most important cities of the world at the cheapest cost!</h3>
