--- a/templates/products.html
+++ b/templates/products.html
@@ -1,4 +1,4 @@
 <h1 class="text-center text-primary">Choose your destiny</h1>
-<div id="lista" class="grid grid-cols-4 grid-cols-2 mx-auto w-80 bg-secondary gap-4 p-3">
+<div id="lista" class="grid grid-cols-4 grid-cols-2 mx-auto w-80 gap-4 p-3">
 
 </div>
