--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,17 +1,17 @@
-<form action="" method="post" class="mx-auto bg-secondary p-3 max-w-50 text-primary">
+<form action="" method="post" class="mx-auto bg-secondary p-3 max-w-50 text-primary rounded-md">
     <fieldset>
-        <legend>Contact</legend>
+        <legend class="p-3">Contact</legend>
         <div class="grid grid-cols-2 gap-4 p-3">
-            <label class="p-3" for="person" name="name">Name</label>
-            <input class="p-3" type="text" id="person" name="person">
+            <label class="p-3 w-full sm-text-center" for="person" name="name">Name</label>
+            <input class="p-3 w-full sm-text-center" type="text" id="person" name="person">
         </div>
         <div class="grid grid-cols-2 gap-4 p-3">
-            <label class="p-3" for="phone">Phone</label>
-            <input class="p-3" type="text" id="phone" name="phone">
+            <label class="p-3 w-full sm-text-center" for="phone">Phone</label>
+            <input class="p-3 w-full sm-text-center" type="text" id="phone" name="phone">
         </div>
         <div class="grid grid-cols-2 gap-4 p-3">
-            <label class="p-3" for="email">Email</label>
-            <input class="p-3" type="email" id="email" name="email">
+            <label class="p-3 w-full sm-text-center" for="email">Email</label>
+            <input class="p-3 w-full sm-text-center" type="email" id="email" name="email">
         </div>
     </fieldset>
     <div class="w-full">
