--- a/templates/contact.html
+++ b/templates/contact.html
@@ -3,15 +3,15 @@
         <legend class="p-3">Contact</legend>
         <div class="grid grid-cols-2 gap-4 p-3">
             <label class="p-3 w-full sm-text-center" for="person" name="name">Name</label>
-            <input class="p-3 w-full sm-text-center" type="text" id="person" name="person">
+            <input class="p-3 w-full sm-text-center" type="text" placeholder="Ana" id="person" name="person">
         </div>
         <div class="grid grid-cols-2 gap-4 p-3">
             <label class="p-3 w-full sm-text-center" for="phone">Phone</label>
-            <input class="p-3 w-full sm-text-center" type="text" id="phone" name="phone">
+            <input class="p-3 w-full sm-text-center" type="tel" placeholder="261 4545454" id="phone" name="phone">
         </div>
         <div class="grid grid-cols-2 gap-4 p-3">
             <label class="p-3 w-full sm-text-center" for="email">Email</label>
-            <input class="p-3 w-full sm-text-center" type="email" id="email" name="email">
+            <input class="p-3 w-full sm-text-center" type="email" placeholder="person@gmail.com" id="email" name="email">
         </div>
     </fieldset>
     <div class="w-full">
