--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,4 @@
-<h1 class="text-center text-primary">Who We Are</h1>
+<h1 class="text-center text-primary"><i class="far fa-building"></i> Who We Are</h1>
 <div class="grid grid-cols-2 w-80 mx-auto">
     <img src="../img/logo.png" class="cover w-full my-auto" alt="">
     <div class="text-center text-primary p-3 bg-secondary rounded-md">
@@ -7,14 +7,6 @@
             orci luctus et ultrices posuere cubilia curae; Proin molestie est quis gravida tristique. Nullam porttitor eu enim eu imperdiet.
 
         </p>
-        <p>Duis a est lectus. Vestibulum cursus vehicula quam, a porttitor lorem. Ut viverra eros vel augue sollicitudin mattis. Donec eu erat nibh. Nullam interdum velit eros. Ut et gravida lacus. Nulla facilisi. Maecenas lobortis pulvinar orci in luctus.
-            Nunc pellentesque nisi eget magna placerat, id consectetur erat feugiat. Etiam nec nulla ac lectus rutrum sagittis. Praesent nulla eros, pretium mollis augue at, finibus dictum orci. Sed finibus, dui quis tristique varius, tortor ex ultrices
-            libero, fermentum sollicitudin ipsum metus ut leo. Vivamus tristique semper pellentesque.
-
-        </p>
-        <p>Integer volutpat nisl eget sem ultrices semper. Vestibulum vitae interdum sapien, egestas feugiat nulla. Vestibulum vehicula risus leo, sed mattis libero pulvinar vitae. Mauris et sem vitae dolor tincidunt faucibus. Suspendisse in lorem est. Fusce
-            nec eros condimentum lacus suscipit eleifend. Nullam rhoncus vel magna ac vehicula. Suspendisse potenti. Nunc dignissim rhoncus ante, quis ullamcorper orci eleifend a. Donec aliquam nisl id sapien finibus tempus. Quisque nec lobortis justo.
-
-        </p>
+        <iframe class="mx-auto block my-3" width="560" height="315" src="https://www.youtube.com/embed/F_o8VkCKBS8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </div>
 </div>
