--- a/templates/contact.html
+++ b/templates/contact.html
@@ -2,19 +2,24 @@
     <fieldset>
         <legend class="p-3">Contact</legend>
         <div class="grid grid-cols-2 gap-4 p-3">
-            <label class="p-3 w-full sm-text-center" for="person" name="name">Name</label>
+            <label class="p-3 w-full sm-text-center" for="person" name="name"><i class="fas fa-user"></i> Name</label>
             <input class="p-3 w-full sm-text-center" type="text" placeholder="Ana" id="person" name="person">
         </div>
         <div class="grid grid-cols-2 gap-4 p-3">
-            <label class="p-3 w-full sm-text-center" for="phone">Phone</label>
+            <label class="p-3 w-full sm-text-center" for="phone"><i class="fas fa-phone"></i> Phone</label>
             <input class="p-3 w-full sm-text-center" type="tel" placeholder="261 4545454" id="phone" name="phone">
         </div>
         <div class="grid grid-cols-2 gap-4 p-3">
-            <label class="p-3 w-full sm-text-center" for="email">Email</label>
+            <label class="p-3 w-full sm-text-center" for="email"><i class="fas fa-envelope"></i> Email</label>
             <input class="p-3 w-full sm-text-center" type="email" placeholder="person@gmail.com" id="email" name="email">
         </div>
     </fieldset>
     <div class="w-full">
-        <button id="send" type="submit" class="btn btn-primary p-3 mx-auto block my-3 text-primary rounded-md">Enviar</button>
+        <button id="send" type="submit" class="btn btn-primary p-3 mx-auto block my-3 text-primary rounded-md"><i class="fas fa-paper-plane"></i> Enviar</button>
     </div>
 </form>
+<nav class="flex justify-center">
+    <a href="https://www.facebook.com" class="btn btn-primary p-3 mx-3 mb mb-5 block my-3 text-primary rounded-md"><i class="fab fa-facebook"></i></a>
+    <a href="https://www.instagram.com" class="btn btn-primary p-3 mx-3 mb mb-5 block my-3 text-primary rounded-md"><i class="fab fa-instagram"></i></a>
+    <a href="https://www.twitter.com" class="btn btn-primary p-3 mx-3 mb mb-5 block my-3 text-primary rounded-md"><i class="fab fa-twitter"></i></a>
+</nav>
