--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,4 @@
-<a id="home" href="/#home">Home</a>
-<a id="products" href="/#products">Products</a>
-<a id="contact" href="/#contact">Contact</a>
-<a id="about" href="/#about">About</a>
+<a id="home" href="/#home"><i class="fas fa-home"></i> Home</a>
+<a id="products" href="/#products"><i class="fas fa-plane"></i> Products</a>
+<a id="contact" href="/#contact"><i class="fas fa-envelope"></i> Contact</a>
+<a id="about" href="/#about"><i class="fas fa-address-card"></i> About</a>
