--- a/templates/hero.html
+++ b/templates/hero.html
@@ -2,16 +2,16 @@
     <div class="my-auto flex flex-col justify-center h-full row-2">
         <ul>
             <li class="text-primary text-center py-3 text-xl">
-                We care about our clients
+                <i class="fas fa-check-circle"></i> We care about our clients
             </li>
             <li class="text-primary text-center py-3 text-xl">
-                Safe flying
+                <i class="fas fa-check-circle"></i> Safe flying
             </li>
             <li class="text-primary text-center py-3 text-xl">
-                Cheapest tickets
+                <i class="fas fa-check-circle"></i> Cheapest tickets
             </li>
         </ul>
-        <a id="tickets" href="#products" class="btn btn-primary mx-auto rounded-md p-3 mb">Buy your tickets Here!</a>
+        <a id="tickets" href="#products" class="btn btn-primary mx-auto rounded-md p-3 mb"><i class="fas fa-ticket-alt"></i> Buy your tickets Here!</a>
     </div>
     <div class="my-auto flex flex-col justify-center h-full row-1">
         <h1 class="text-primary text-center">American <span class="text-secondary">Airlines</span></h1>
