--- a/templates/about.html
+++ b/templates/about.html
@@ -7,6 +7,7 @@
             orci luctus et ultrices posuere cubilia curae; Proin molestie est quis gravida tristique. Nullam porttitor eu enim eu imperdiet.
 
         </p>
-        <iframe class="mx-auto block my-3" width="560" height="315" src="https://www.youtube.com/embed/F_o8VkCKBS8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="mx-auto block my-3 w-full" width="560" height="315" src="https://www.youtube.com/embed/F_o8VkCKBS8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen></iframe>
     </div>
 </div>
