--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,4 +1,4 @@
-<form action="" method="post" class="mx-auto bg-secondary p-3 max-w-50 text-primary rounded-md">
+<form action="" method="post" class="mx-auto bg-secondary p-3 max-w-50 max-w-80 text-primary rounded-md">
     <fieldset>
         <legend class="p-3">Contact</legend>
         <div class="grid grid-cols-2 gap-4 p-3">
