--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,4 +1,4 @@
-<nav id="social-media" class="flex justify-center">
+<nav id="social-media" class="flex justify-center my-3">
     <a href="https://www.facebook.com" class="btn btn-primary p-3 mx-3 mb mb-5 block my-3 text-primary rounded-md"><i class="fab fa-facebook"></i></a>
     <a href="https://www.instagram.com" class="btn btn-primary p-3 mx-3 mb mb-5 block my-3 text-primary rounded-md"><i class="fab fa-instagram"></i></a>
     <a href="https://www.twitter.com" class="btn btn-primary p-3 mx-3 mb mb-5 block my-3 text-primary rounded-md"><i class="fab fa-twitter"></i></a>
