--- a/templates/hero.html
+++ b/templates/hero.html
@@ -1,6 +1,6 @@
-<div class="absolute z-2 h-full w-full grid grid-cols-2">
-    <div class="my-auto flex flex-col justify-center h-full row-2">
-        <ul>
+<div class="absolute z-2 h-full w-full grid grid-cols-2 mb-3">
+    <div class="my-auto h-full w-full">
+        <ul class="h-full w-full flex flex-col justify-center">
             <li class="text-primary text-center py-3 text-xl">
                 <i class="fas fa-check-circle"></i> We care about our clients
             </li>
@@ -10,14 +10,14 @@
             <li class="text-primary text-center py-3 text-xl">
                 <i class="fas fa-check-circle"></i> Cheapest tickets
             </li>
+            <a id="tickets" href="#products" class="btn btn-primary mx-auto rounded-md p-3 block "><i class="fas fa-ticket-alt"></i> Buy your tickets Here!</a>
         </ul>
-        <a id="tickets" href="#products" class="btn btn-primary mx-auto rounded-md p-3 mb"><i class="fas fa-ticket-alt"></i> Buy your tickets Here!</a>
     </div>
-    <div class="my-auto flex flex-col justify-center h-full row-1">
-        <h1 class="text-primary text-center">American <span class="text-secondary">Airlines</span></h1>
-        <h2 class="text-primary text-center">The pleasure of flying</h2>
-        <h3 class="text-primary text-center">Fly to the most important cities of the world at the cheapest cost!</h3>
+    <div class="my-auto flex flex-col justify-center h-full row-1 w-full">
+        <h1 class="text-primary text-center w-full">American <span class="text-secondary">Airlines</span></h1>
+        <h2 class="text-primary text-center w-full">The pleasure of flying</h2>
+        <h3 class="text-primary text-center w-full">Fly to the most important cities of the world at the cheapest cost!</h3>
     </div>
 </div>
-<div id="bg" class="z-1">
+<div id="bg" class="z-1 h-full ">
 </div>
