--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,4 +1,9 @@
-<a id="home" href="/#home"><i class="fas fa-home"></i> Home</a>
-<a id="products" href="/#products"><i class="fas fa-plane"></i> Products</a>
-<a id="contact" href="/#contact"><i class="fas fa-envelope"></i> Contact</a>
-<a id="about" href="/#about"><i class="fas fa-address-card"></i> About</a>
+<div id="dropdown" class="mx-auto w-full">
+    <a href="#" class="w-full"><i class="fas fa-bars text-center w-full"></i></a>
+</div>
+<div id="navigation" class="hidden">
+    <a id="home" href="/#home"><i class="fas fa-home"></i> Home</a>
+    <a id="products" href="/#products"><i class="fas fa-plane"></i> Products</a>
+    <a id="contact" href="/#contact"><i class="fas fa-envelope"></i> Contact</a>
+    <a id="about" href="/#about"><i class="fas fa-address-card"></i> About</a>
+</div>
