--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,5 +1,5 @@
 <div id="dropdown" class="mx-auto w-full">
-    <a href="#" class="w-full"><i class="fas fa-bars text-center w-full"></i></a>
+    <a class="w-full"><i class="fas fa-bars text-center w-full"></i></a>
 </div>
 <div id="navigation" class="hidden">
     <a id="home" href="/#home"><i class="fas fa-home"></i> Home</a>
