--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
-<h1 class="text-center text-primary"><i class="far fa-building"></i> Who We Are</h1>
-<div class="grid grid-cols-2 w-80 mx-auto">
+<h1 class="text-center text-primary my-4 block p-3"><i class="far fa-building"></i> Who We Are</h1>
+<div class="grid grid-cols-2 w-80 mx-auto my-4">
     <img src="../img/logo.png" class="cover w-full my-auto" alt="">
     <div class="text-center text-primary p-3 bg-secondary rounded-md">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque sollicitudin justo et congue tincidunt. Donec vitae nibh eu massa interdum ullamcorper. Nullam varius ipsum lorem, vitae faucibus dolor pharetra eu. In luctus tristique felis,
