--- a/templates/bought.html
+++ b/templates/bought.html
@@ -1,3 +1,3 @@
 <h1 class="text-primary text-center">Buy Tickets</h1>
-<h3 class="text-primary text-center">You are buying:</h3>
-<div class="text-primary text-center" id="buy"></div>
+<h3 class="text-primary text-center my-3">You are buying:</h3>
+<div class="text-primary text-center bg-secondary max-w-50 mx-auto rounded-md p-3" id="buy"></div>
