--- a/templates/hero.html
+++ b/templates/hero.html
@@ -14,9 +14,9 @@
         </ul>
     </div>
     <div class="my-auto flex flex-col justify-center h-full row-1 w-full">
-        <h1 class="text-primary text-center w-full">American <span class="text-secondary">Airlines</span></h1>
-        <h2 class="text-primary text-center w-full">The pleasure of flying</h2>
-        <h3 class="text-primary text-center w-full">Fly to the most important cities of the world at the cheapest cost!</h3>
+        <h1 class="text-primary text-center w-full p-3">American <span class="text-secondary">Airlines</span></h1>
+        <h2 class="text-primary text-center w-full p-3">The pleasure of flying</h2>
+        <h3 class="text-primary text-center w-full p-3">Fly to the most important cities of the world at the cheapest cost!</h3>
     </div>
 </div>
 <div id="bg" class="z-1 h-full ">
